@@ -6,6 +6,8 @@ This file lists the changes in each six version.
 Development version
 -------------------
 
+- Raise an AttributeError for every attribute of unimportable modules.
+
 - Issue #56: Make the fake modules six.moves puts into sys.modules appear not to
   have a __path__ unless they are loaded.
 
